--- a/app/views/enforcement/v1/contact-details/contact-details.html
+++ b/app/views/enforcement/v1/contact-details/contact-details.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="how-to-answer" method="post">
+      <form action="/contactdetails" method="post">
 
         <span class="govuk-caption-l">
           Provide your contact details
