--- a/app/views/enforcement/v1/grounds/grounds.html
+++ b/app/views/enforcement/v1/grounds/grounds.html
@@ -27,7 +27,7 @@
       <form action="/grounds" method="post">
 
         <span class="govuk-caption-l">
-          Grounds and facts
+          Choose your grounds of appeal
         </span>
 
         <div class="govuk-form-group">
