--- a/app/views/before-you-start/v11/planning-department.html
+++ b/app/views/before-you-start/v11/planning-department.html
@@ -2,8 +2,10 @@
 <!-- {% set pageref = "BYS-001" %} -->
 {% extends "layouts/before-you-start/v11.html" %}
 
+{% set title = "Which local planning department issued the enforcement notice?" %}
+
 {% block pageTitle %}
-  Which local planning department dealt with your planning application?
+{{ title }}
  - Before you start - {{serviceName}} - GOV.UK
 {% endblock %}
 
@@ -40,10 +42,10 @@
 
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--l" for="postcode">
-            Which local planning department dealt with your planning application?
+            {{ title }}
           </label>
 
-          <p class="govuk-hint">This is also known as your 'local planning authority' or 'LPA'.</p>
+          <p class="govuk-hint">This is also known as your ‘local planning authority’ or ‘LPA’.</p>
           <select class="govuk-select govuk-input--width-20" id="bys-{{version}}-planningdepartment" name="bys-{{version}}-planningdepartment">
             <option value=""></option>
             {% for lpa in data['lpas'] %}
