--- a/app/views/enforcement/v1/additional-people/add-person.html
+++ b/app/views/enforcement/v1/additional-people/add-person.html
@@ -1,6 +1,6 @@
 {% extends "layouts/appellant-submission/v13.html" %}
 
-{% set title = "Is there anyone else appealing the enforcement notice?" %}
+{% set title = "Add someone else to the appeal" %}
 
 {% block pageTitle %}
   {{title}} - Additional people - GOV.UK
@@ -24,34 +24,29 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/additionalpeople" method="post">
+    <form action="added-people" method="post">
 
       <span class="govuk-caption-l">
         Tell us about any additional people
       </span>
-      {{ govukRadios({
-        idPrefix: "enf-"+version+"-additionalpeople",
-        name: "addedpeople",
-        fieldset: {
-          legend: {
-            text: title,
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
-          }
+      <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
+        {{ title }}
+      </h1>
+
+      <p class="govuk-hint">
+        You must add 1 person at a time.
+      </p>
+
+      {{ govukInput({
+        id: "enf-"+version+"-addedperson",
+        name: "enf-"+version+"-addedperson",
+        label: {
+          text: "Full name"
         },
         hint: {
-          text: "They must have the same address and be appealing the same enforcement notice."
+          html: hintHtml
         },
-        items: [
-          {
-            value: "yes",
-            text: "Yes"
-          },
-          {
-            value: "no",
-            text: "No"
-          }
-        ]
+        classes: "govuk-!-width-two-thirds"
       }) }}
 
       <div class="govuk-button-group">
