--- a/app/views/enforcement/v1/appeal-site/health-and-safety-issues.html
+++ b/app/views/enforcement/v1/appeal-site/health-and-safety-issues.html
@@ -49,7 +49,7 @@
         Tell us about any health and safety issues on the appeal site in case an Inspector needs to carry out a site visit.
       </p>
       <p class="govuk-body">
-        The appeal site is the area of property or land that your original planning application relates to.
+        The appeal site is the area of property or land that your enforcement notice relates to.
       </p>
       {{ govukDetails({
         summaryText: "List of health and safety concerns",
