--- a/app/views/enforcement/v1/grounds/groundA-text.html
+++ b/app/views/enforcement/v1/grounds/groundA-text.html
@@ -43,7 +43,7 @@
       <form action="" method="post">
 
         <span class="govuk-caption-l">
-          Grounds and facts
+          Choose your grounds of appeal
         </span>
 
         <div class="govuk-form-group govuk-!-margin-bottom-0">
