--- a/app/views/enforcement/v1/grounds/late-application.html
+++ b/app/views/enforcement/v1/grounds/late-application.html
@@ -27,15 +27,15 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="procedure" method="post">
+    <form action="/lateapplication" method="post">
 
       <span class="govuk-caption-l">
-        Grounds and facts
+        Choose your grounds of appeal
       </span>
 
       {{ govukRadios({
-        idPrefix: "enf-"+version+"-late-applcation",
-        name: "enf-"+version+"-late-applcation",
+        idPrefix: "enforcement-late-applcation",
+        name: "enforcement-late-applcation",
         fieldset: {
           legend: {
             text: title,
