--- a/app/views/enforcement/v1/appeal-site/owner-consent.html
+++ b/app/views/enforcement/v1/appeal-site/owner-consent.html
@@ -3,7 +3,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "Do you plan to submit a planning obligation to support your appeal?" %}
+{% set title = "Did you have consent from the owner to occupy the land or building when the enforcement notice was issued?" %}
 
 {% block pageTitle %}
   {{title}} - GOV.UK
@@ -26,15 +26,15 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/planningobligation" method="post">
+    <form action="/ownerconsent" method="post">
 
       <span class="govuk-caption-l">
-        Upload documents for your appeal
+        Tell us about the appeal site
       </span>
 
       {{ govukRadios({
-        idPrefix: "enforcement-planning-obligation",
-        name: "enforcement-planning-obligation",
+        idPrefix: "enforcement-site-owner-consent",
+        name: "enforcement-site-owner-consent",
         fieldset: {
           legend: {
             text: title,
@@ -42,16 +42,19 @@
             classes: "govuk-fieldset__legend--l"
           }
         },
+        hint: {
+          text: "This includes spoken or written consent."
+        },
         items: [
           {
             value: "Yes",
-            text: "Yes",
-            checked: checked("enforcement-planning-obligation", "Yes")
+            text: "Yes, I had consent from the owner to occupy the land or building when the enforcement notice was issued",
+            checked: checked("enforcement-site-owner-consent", "Yes")
           },
           {
             value: "No",
-            text: "No",
-            checked: checked("enforcement-planning-obligation", "No")
+            text: "No, I did not have consent from the owner to occupy the land or building when the enforcement notice was issued",
+            checked: checked("enforcement-site-owner-consent", "No")
           }
         ]
       }) }}
