--- a/app/views/enforcement/v1/declaration.html
+++ b/app/views/enforcement/v1/declaration.html
@@ -33,7 +33,7 @@
           Check your answers and submit your appeal
         </span>
         <h1 class="govuk-heading-xl">
-          Declaration
+          {{ title }}
         </h1>
 
         <p class="govuk-body">
@@ -41,11 +41,11 @@
         <p>
         <ul class="govuk-list govuk-list--bullet">
           <li>this is your only opportunity to submit the appeal</li>
-          <li>if you have not included all the information we've requested, we may not be able to progress your appeal</li>
+          <li>if you have not included all the information we’ve requested, we may not be able to progress your appeal</li>
           <li>we will contact you about any missing information, but this may delay your appeal​</li>
         </ul>
         <p class="govuk-body">
-          You also confirm that you've completed all sections and the details are correct to the best of your knowledge.
+          You also confirm that you’ve completed all sections and the details are correct to the best of your knowledge.
         <p>
 
         <div class="govuk-inset-text">
