--- a/app/views/enforcement/v1/check-your-answers.html
+++ b/app/views/enforcement/v1/check-your-answers.html
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <form action="" method="post">
+      <form action="declaration" method="post">
 
         <span class="govuk-caption-l">
           Check your answers and submit your appeal
@@ -30,7 +30,7 @@
         <h1 class="govuk-heading-xl">
           Check your answers
         </h1>
-        
+
         <h2 class="govuk-heading-l">Your contact details</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
@@ -83,7 +83,7 @@
             </dd>
           </div>
         </dl>
-        
+
         <h2 class="govuk-heading-l govuk-!-margin-top-9">The appeal site</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
@@ -257,7 +257,7 @@
                 </a>
               </dd>
             </div>
-            
+
           {% endif %}
 
           <div class="govuk-summary-list__row">
@@ -267,7 +267,7 @@
             <dd class="govuk-summary-list__value">
               <p class="govuk-body">
                 {{ data["appealsub-"+version+"-appealsite-agriculturalholdings"] }}
-              </p>            
+              </p>
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="javascript:preventDefault();">
@@ -284,7 +284,7 @@
               <dd class="govuk-summary-list__value">
                 <p class="govuk-body">
                   {{ data["appealsub-"+version+"-appealsite-agriculturalholdings-tenant"] }}
-                </p>            
+                </p>
               </dd>
               <dd class="govuk-summary-list__actions">
                 <a class="govuk-link" href="javascript:preventDefault();">
@@ -300,7 +300,7 @@
                 <dd class="govuk-summary-list__value">
                   <p class="govuk-body">
                     {{ data["appealsub-"+version+"-appealsite-agriculturalholdings-othertenants"] }}
-                  </p>            
+                  </p>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="javascript:preventDefault();">
@@ -317,7 +317,7 @@
                 <dd class="govuk-summary-list__value">
                   <p class="govuk-body">
                     {{ data["appealsub-"+version+"-appealsite-agriculturalholdings-toldtenants"] }}
-                  </p>            
+                  </p>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                   <a class="govuk-link" href="javascript:preventDefault();">
@@ -358,7 +358,7 @@
                 <p class="govuk-body">
                   {{ data["appealsub-"+version+"-appealsite-visible-info"] }}
                 </p>
-              {% endif %}              
+              {% endif %}
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="javascript:preventDefault();">
@@ -387,7 +387,7 @@
             </dd>
           </div>
         </dl>
-        
+
         <h2 class="govuk-heading-l govuk-!-margin-top-9">Deciding your appeal</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
@@ -479,7 +479,7 @@
           {% endif %}
 
         </dl>
-        
+
         <h2 class="govuk-heading-l govuk-!-margin-top-9">Your planning application</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
@@ -563,7 +563,7 @@
             </dd>
           </div>
         </dl>
-        
+
         <h2 class="govuk-heading-l govuk-!-margin-top-9">Your appeal</h2>
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
