Enforcement rewind after a diverged main

--- a/app/views/enforcement/v1/grounds/groundG-text.html
+++ b/app/views/enforcement/v1/grounds/groundG-text.html
@@ -44,14 +44,15 @@
                 text: title,
                 classes: "govuk-label--l",
                 isPageHeading: true
-              },
-              hint: {
-                text: "You should say what you consider to be a more reasonable period of time and why."
               }
             }) }}
 
           </fieldset>
         </div>
+
+        <p class="govuk-body">
+          You should say what you consider to be a more reasonable period of time and why.
+        </p>
 
         <p class="govuk-body">
           If you intend to only select this statement, you should consider negotiating the timescale with the local planning department.
@@ -67,7 +68,7 @@
           </a>
         </p>
 
-
+        
         {{ govukButton({
           href: "late-application",
           text: "Continue"
