--- a/app/views/enforcement/v1/upload/obligation-not-started.html
+++ b/app/views/enforcement/v1/upload/obligation-not-started.html
@@ -36,7 +36,7 @@
       </h1>
 
       <p class="govuk-body">
-        Your deadline to submit your finalised planning obligation is around 6 weeks after you submit your appeal. We'll tell you the exact date when we confirm your appeal.
+        Your deadline to submit your finalised planning obligation is around 6 weeks after you submit your appeal. We’ll tell you the exact date when we confirm your appeal.
       </p>
 
       {{ govukButton({
