--- a/app/views/enforcement/v1/confirmation.html
+++ b/app/views/enforcement/v1/confirmation.html
@@ -24,27 +24,25 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleText: title
+        titleText: "Appeal submitted"
       }) }}
 
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
       <p class="govuk-body">
-        We’ve sent you a confirmation email with a link to download a copy of your appeal.
+        We've sent you a confirmation email with a link to download a copy of your appeal.
       </p>
+      
       {{ govukInsetText({
         text: "You need to send a copy of your appeal to the local planning department."
       }) }}
-      <p class="govuk-body">
-        If you need to contact us, include your planning application number.
-      </p>
 
       <h2 class="govuk-heading-m">
         What happens next?
       </h2>
 
       <p class="govuk-body">
-        We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.
+        We’ll check you’ve submitted everything we need to progress your appeal. We'll contact you once we've done this.
       </p>
       <!--p class="govuk-body">
         You can find out more about the appeals process in the <a href="javascript:preventDefault();">appeal a planning decision guidance</a>.
