--- a/app/views/before-you-start/v11/enforcement-effective-date.html
+++ b/app/views/before-you-start/v11/enforcement-effective-date.html
@@ -27,7 +27,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="appeal-intent" method="post">
+      <form action="/enforcementeffectivedatecheck" method="post">
 
         <span class="govuk-caption-l">
           Before you start
