--- a/app/views/before-you-start/v11/index.html
+++ b/app/views/before-you-start/v11/index.html
@@ -30,7 +30,7 @@
         Check if you can use this service
       </h2>
       <p class="govuk-body">
-        Before you start, we'll check if you can use this service by asking some questions about your appeal.
+        Before you start, we’ll check if you can use this service by asking some questions about your appeal.
       </p>
       <p class="govuk-body">
         If you cannot use this service, you can still appeal using the existing service.
@@ -38,7 +38,7 @@
 
       {{ govukButton({
         classes: "govuk-!-margin-top-5",
-        href: "v11/what-do-you-want-to-appeal",
+        href: "what-do-you-want-to-appeal",
         text: "Continue"
       }) }}
 
