--- a/app/views/enforcement/v1/confirmation.html
+++ b/app/views/enforcement/v1/confirmation.html
@@ -30,9 +30,9 @@
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
       <p class="govuk-body">
-        We've sent you a confirmation email with a link to download a copy of your appeal.
+        We’ve sent you a confirmation email with a link to download a copy of your appeal.
       </p>
-      
+
       {{ govukInsetText({
         text: "You need to send a copy of your appeal to the local planning department."
       }) }}
@@ -42,20 +42,19 @@
       </h2>
 
       <p class="govuk-body">
-        We’ll check you’ve submitted everything we need to progress your appeal. We'll contact you once we've done this.
+        We’ll check you’ve submitted everything we need to progress your appeal. We’ll contact you once we’ve done this.
       </p>
-      <!--p class="govuk-body">
-        You can find out more about the appeals process in the <a href="javascript:preventDefault();">appeal a planning decision guidance</a>.
-      </p>
-      <p class="govuk-body">
-        <a href="javascript:preventDefault();">What did you think of this service?</a> (takes 2 minutes)
-      </p-->
-
-      <br><br><br><br><br>
-      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
-      <p class="govuk-body govuk-!-margin-top-9"><a href="../email/confirmation">(go to confirmation email)</a></p>
 
     </div>
+    <!-- this is a prototype only link -->
+    <!-- <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+      <p class="govuk-body-s pins-prototype-only">
+        <a href="../email/confirmation">
+          (go to confirmation email)
+        </a>
+      </p>
+    </div> -->
+
   </div>
 
 {% endblock %}
